[package]
name = "core"
version = "0.1.0"
authors = ["fly"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_def = { path = "../core_def" }
nix = "0.19"
libc = "0.2"
lazy_static = "1.4"
parking_lot = "0.11"
base64 = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }
futures = { version = "0.3.2", features = ["thread-pool"] }
futures-timer = "3.0.2"

[features]
default = ["nft", "zfs"]
cow = []
nft = []
zfs = []
