[package]
name = "server_def"
version = "0.1.0"
authors = ["gary.fan <1779905848@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1.0",features=["derive"]}
core_def = {path="../core_def"}
myutil = { git = "https://gitee.com/kt10/myutil", branch = "master" }

